# Semestralni_Projekt_Sqlite

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.h  config.status  fts5parse.c  lemon  libtool  mkkeywordhash  mksourceid  opcodes.c  opcodes.h  parse.c  shell.c  sqlite3.pc
lemon.dSYM/Contents/Resources/DWARF/: lemon
mkkeywordhash.dSYM/Contents/Resources/DWARF/: mkkeywordhash
mksourceid.dSYM/Contents/Resources/DWARF/: mksourceid
tests/: myTest.c  planTest.c
tsrc/: fts5.c  shell.c  sqlite3.h  vdbe.c
